syntax = "proto3";

package ours_gpu;

service WorkerService {
  rpc Register(WorkerInfo) returns (RegisterReply);
  rpc GetRegisterChallenge(RegisterChallengeReq) returns (RegisterChallengeReply);
  rpc Heartbeat(HeartbeatReq) returns (HeartbeatReply);
  rpc JobStream(SubscribeReq) returns (stream Job); // 推播：controller 主動指派
  rpc ReportResult(JobResult) returns (ReportReply);
  rpc PresignOutput(PresignOutputReq) returns (PresignOutputReply);
}

message WorkerInfo {
  string id = 1;           // 由 worker 產生（uuid）
  string orgId = 2;        // 組織（之後可從鏈上驗）
  uint32 concurrency = 3;  // 可同時跑幾個 job
  string wallet = 4;       // EVM address of the worker wallet (for staking checks)
  string nonce = 5;        // EIP-712: 0x-prefixed 32-byte nonce
  uint64 expires = 6;      // EIP-712: unix seconds expiry
  string signature = 7;    // EIP-712: 0x-signature
}

message RegisterChallengeReq { string id = 1; string wallet = 2; }
message RegisterChallengeReply {
  string nonce = 1;               // 0x-prefixed 32-byte random nonce
  uint64 expires = 2;             // unix seconds
  uint64 chainId = 3;             // chain id for domain
  string name = 4;                // domain name (default: OursGPU)
  string version = 5;             // domain version (default: 1)
  string salt = 6;                // EIP-712 domain salt (bytes32)
}

message RegisterReply { bool ok = 1; string note = 2; }
message HeartbeatReq { string id = 1; uint32 running = 2; }
message HeartbeatReply { bool ok = 1; }
message SubscribeReq { string id = 1; }

message Job {
  string jobId = 1;
  string jobType = 2;         // e.g., "hash_mining", "ai_training"
  string objectKey = 3;       // MinIO key for job payload/assets
  string entryCommand = 4;    // command to run the job
  // Convenience URLs and output prefix (short-lived)
  string payloadUrl = 10;
  string outputPrefix = 12;   // e.g., outputs/<jobId>/
}

message JobResult {
  string jobId = 1;
  string workerId = 2;
  string solution = 3;        // output (e.g., nonce/hash or path)
  bool success = 4;           // worker's local success; controller may re-verify
  string metricsJson = 5;     // optional JSON-encoded metrics/results
}
message ReportReply { bool ok = 1; }

message PresignOutputReq {
  string jobId = 1;
  string fileName = 2;         // relative to outputs/<jobId>/
  uint32 expiresSeconds = 3;   // optional; default by server
}
message PresignOutputReply {
  string bucket = 1;
  string objectKey = 2;  // outputs/<jobId>/<fileName>
  string putUrl = 3;
  string getUrl = 4;
}
